# MiniC_Complier

./: LICENSE  README.md
1-源代码/1-词法分析/Lex/: CMakeLists.txt  lex.yy.c  y.tab.h
1-源代码/1-词法分析/SeuLex/: CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  RegFilter.h  RegToDFA.h  SwitchDuilder.h  lexSource.cpp  main.cpp  yylParser.h
1-源代码/2-语法分析/: CMakeLists.txt  LR1Table.h  main.cpp  y.tab.c  yaccGrammar.h  yaccParser.h  yaccSource.cpp  yaccSource.h
1-源代码/2-语法分析/test/: test.c
1-源代码/3-语义分析/: AssemblyGenerator.cpp  AssemblyGenerator.h  CMakeLists.txt  InstructionEncoder.cpp  InstructionEncoder.h  ObjectFileGenerator.cpp  ObjectFileGenerator.h  PrettyPrinter.cpp  PrettyPrinter.h  SimpleAssembler.cpp  ast.cpp  ast.h  interpreter.cpp  interpreter.h  ir.cpp  ir.h  lex.yy.cpp  main.cpp  mini_c.tab.cpp  mini_c.tab.hpp  mini_c.y  semantic.cpp  semantic.h  symbol.cpp  symbol.h  test.cpp  type.cpp  type.h
2-语法文件/1-词法、语法分析/: c99.l
2-语法文件/2-语义分析/: mini_c.l
3-可执行文件/3-语义分析/: mini_c  statement.txt
4-测试用例/1-词法分析、语法分析/: test.c  test.lo
4-测试用例/2-语法分析/: 1  1.c  1.s
